@@ -758,6 +758,8 @@ public final class Fields implements Comparable, Iterable, Serializable
         result.set( i, get( indexOf( field ) ) );
       else if( this.get( translatePos( (Integer) field ) ) instanceof String )
         result.set( i, get( translatePos( (Integer) field ) ) );
+      else
+        result.set( i, translatePos( (Integer) field ) ); // use absolute position if no field name
       }
 
     return result;
