@@ -32,6 +32,7 @@ import cascading.operation.Aggregator;
 import cascading.operation.ConcreteCall;
 import cascading.operation.Filter;
 import cascading.operation.Function;
+import cascading.operation.Identity;
 import cascading.operation.aggregator.Count;
 import cascading.operation.function.UnGroup;
 import cascading.operation.regex.RegexFilter;
@@ -82,14 +83,16 @@ public class BasicPipesTest extends CascadingTestCase
     if( !new File( inputFileIps ).exists() )
       fail( "data file not found" );
 
-    Tap source = new Hfs( new TextLine(), inputFileIps );
+    Tap source = new Hfs( new TextLine( Fields.size( 2 ) ), inputFileIps );
     Tap sink = new Hfs( new TextLine(), outputPath + "/count", true );
 
     Pipe pipe = new Pipe( "count" );
     pipe = new GroupBy( pipe, new Fields( 1 ) );
-    pipe = new Every( pipe, new Fields( 1 ), new Count(), new Fields( 0, 1 ) );
+    pipe = new Every( pipe, new Fields( 1 ), new Count( new Fields( 0 ) ), new Fields( 0, 1 ) );
 
     Flow flow = new FlowConnector().connect( source, sink, pipe );
+
+//    flow.writeDOT( "basic.dot" );
 
     flow.start();
     flow.complete();
@@ -137,14 +140,17 @@ public class BasicPipesTest extends CascadingTestCase
     if( !new File( inputFileApache ).exists() )
       fail( "data file not found" );
 
-    Tap source = new Hfs( new TextLine(), inputFileApache );
-    Tap sink = new Hfs( new TextLine(), outputPath + "/simple", true );
+    Tap source = new Hfs( new TextLine( Fields.size( 2 ) ), inputFileApache );
+    Tap sink = new Hfs( new TextLine( Fields.size( 1 ) ), outputPath + "/simple", true );
 
     Pipe pipe = new Pipe( "test" );
 
     Function parser = new RegexParser( "^[^ ]*" );
 
-    pipe = new Each( pipe, new Fields( 1 ), parser, new Fields( 2 ) );
+    pipe = new Each( pipe, new Fields( 1 ), parser, new Fields( 0, 2 ) );
+
+    // test that selector against incoming creates proper outgoing
+    pipe = new Each( pipe, new Fields( 1 ), new Identity() );
 
     pipe = new GroupBy( pipe, new Fields( 0 ) );
 
@@ -158,7 +164,7 @@ public class BasicPipesTest extends CascadingTestCase
 
     flow.complete();
 
-    validateLength( flow, 8 );
+    validateLength( flow, 8, 1 );
     }
 
   public void testSimpleRelative() throws Exception
@@ -166,7 +172,7 @@ public class BasicPipesTest extends CascadingTestCase
     if( !new File( inputFileApache ).exists() )
       fail( "data file not found" );
 
-    Tap source = new Hfs( new TextLine(), inputFileApache );
+    Tap source = new Hfs( new TextLine( Fields.size( 2 ) ), inputFileApache );
     Tap sink = new Hfs( new TextLine(), outputPath + "/simplerelative", true );
 
     Pipe pipe = new Pipe( "test" );
@@ -195,7 +201,7 @@ public class BasicPipesTest extends CascadingTestCase
     if( !new File( inputFileLower ).exists() )
       fail( "data file not found" );
 
-    Tap sourceLower = new Hfs( new TextLine(), inputFileLower );
+    Tap sourceLower = new Hfs( new TextLine( Fields.size( 2 ) ), inputFileLower );
     Tap sourceUpper = new Hfs( new TextLine(), inputFileUpper );
 
     Map sources = new HashMap();
@@ -235,7 +241,7 @@ public class BasicPipesTest extends CascadingTestCase
     if( !new File( inputFileJoined ).exists() )
       fail( "data file not found" );
 
-    Tap source = new Hfs( new TextLine(), inputFileJoined );
+    Tap source = new Hfs( new TextLine( Fields.size( 2 ) ), inputFileJoined );
     Tap sink = new Hfs( new TextLine(), outputPath + "/ungrouped", true );
 
     Pipe pipe = new Pipe( "test" );
@@ -258,7 +264,7 @@ public class BasicPipesTest extends CascadingTestCase
     if( !new File( inputFileApache ).exists() )
       fail( "data file not found" );
 
-    Tap source = new Hfs( new TextLine(), inputFileApache );
+    Tap source = new Hfs( new TextLine( Fields.size( 2 ) ), inputFileApache );
     Tap sink = new Hfs( new TextLine(), outputPath + "/filterall", true );
 
     Pipe pipe = new Pipe( "test" );
@@ -279,7 +285,7 @@ public class BasicPipesTest extends CascadingTestCase
     if( !new File( inputFileApache ).exists() )
       fail( "data file not found" );
 
-    Tap source = new Hfs( new TextLine(), inputFileApache );
+    Tap source = new Hfs( new TextLine( Fields.size( 2 ) ), inputFileApache );
     Tap sink = new Hfs( new TextLine(), outputPath + "/filter", true );
 
     Pipe pipe = new Pipe( "test" );
@@ -300,7 +306,7 @@ public class BasicPipesTest extends CascadingTestCase
     if( !new File( inputFileApache ).exists() )
       fail( "data file not found" );
 
-    Tap source = new Hfs( new TextLine(), inputFileApache );
+    Tap source = new Hfs( new TextLine( Fields.size( 2 ) ), inputFileApache );
     Tap sink = new Hfs( new TextLine(), outputPath + "/simple", true );
 
     Pipe pipe = new Pipe( "test" );
